# ChangeLog for app-crypt/gnupg
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/gnupg/ChangeLog,v 1.538 2014/08/13 14:24:41 k_f Exp $

*gnupg-2.0.26 (13 Aug 2014)

  13 Aug 2014; Kristian Fiskerstrand <k_f@gentoo.org>
  +files/gnupg-2.0.26-Need-to-init-the-trustdb-for-import.patch,
  +gnupg-2.0.26.ebuild:
  Version bump to 2.0.26. Add patch to fix an import issue for trust-
  model=always (bug #519760)

  30 Jul 2014; Kristian Fiskerstrand <k_f@gentoo.org> metadata.xml:
  Update metadata longdesc to reflect IDEA is now also part of GnuPG and the
  OpenPGP specs have been amended in RFC4880

  25 Jul 2014; Jason A. Donenfeld <zx2c4@gentoo.org> gnupg-2.1.0_beta751.ebuild:
  It's not in the mirrors yet.

*gnupg-2.1.0_beta751 (25 Jul 2014)

  25 Jul 2014; Jason A. Donenfeld <zx2c4@gentoo.org>
  +gnupg-2.1.0_beta751.ebuild:
  The fifth beta of gnupg 2.1 is finally shaping up.

  16 Jul 2014; Alon Bar-Lev <alonbl@gentoo.org> -gnupg-1.4.16.ebuild,
  -gnupg-2.0.22.ebuild, -gnupg-2.0.23.ebuild:
  Cleanup

  12 Jul 2014;  <tgall@gentoo.org> gnupg-2.0.25.ebuild:
  Stable for arm64 bug #514718

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> gnupg-1.4.18.ebuild,
  gnupg-2.0.25.ebuild:
  Stable for sparc, wrt bug #514718

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> gnupg-1.4.18.ebuild,
  gnupg-2.0.25.ebuild:
  Stable for arm, wrt bug #514718

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> gnupg-1.4.18.ebuild,
  gnupg-2.0.25.ebuild:
  Stable for ia64, wrt bug #514718

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> gnupg-1.4.18.ebuild,
  gnupg-2.0.25.ebuild:
  Stable for ppc64, wrt bug #514718

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> gnupg-1.4.18.ebuild,
  gnupg-2.0.25.ebuild:
  Stable for ppc, wrt bug #514718

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> gnupg-1.4.18.ebuild,
  gnupg-2.0.25.ebuild:
  Stable for alpha, wrt bug #514718
