@@ -6,26 +6,26 @@ AUX gnupg-2.0.26-Need-to-init-the-trustdb-for-import.patch 895 SHA256 063f50e829
 DIST gnupg-1.4.18.tar.bz2 3649557 SHA256 b7b5fdda78849955e0cdbc5a085f3a08f8b7fba126c622085debb62def5d6388 SHA512 f9619ede8e0d2844774e07fb42359444c5ab8e15565a87f419f76cc3d781940c564f35f429131686fdd7559c5c2edb49506b3c0a1feecbd95438743075be3e63 WHIRLPOOL 780876be0603fd0605b192721e2bbb770ad67d98acba8ef0fd769ab3241467696da5f49a189d89600d076691bf2cedb1294ffade5c44f6d24512d6a93a6f8981
 DIST gnupg-2.0.25.tar.bz2 4301689 SHA256 b3abe97df096cf53d6a422ac922f3c48e688bc892b7ccf669b92f0b7fc6c5823 SHA512 8b80c86ec53ed3b82d15a8e316baf175691e06e1bcac28d66c61fd37d07e26196a7ee7855e6eb958c301cee764866cc3cf00e5ec0aef23abddf7427bb3d23fb1 WHIRLPOOL 786f3db3af0c96249e128ce3a30dee7e9fbec38d75ed29138f0dfdcbe4f4377c39d4152844087cec0147921eed73c1a01382b542c6a27e86e8bd9265f67e65e2
 DIST gnupg-2.0.26.tar.bz2 4303384 SHA256 7758e30dc382ae7a7167ed41b7f936aa50af5ea2d6fccdef663b5b750b65b8e0 SHA512 5dd23baaac764fd48abd235ed52a85a2c7fd68b98fcde45c0f294ddb3b5629e8b1bd894585fbed4e6a6cb2bc4a5552c098c3cf1a849fffa469424fd0a4fee726 WHIRLPOOL 8d9b30337957f6bfeddea29116d862ef0c0ddd06d59bc2799db236b91b2c6767aad6f37f2166fc431c5d9454eb41f49f3e261bc38d0e89361f0c467f4591cd5a
-DIST gnupg-2.1.0-beta751.tar.bz2 3078612 SHA256 5abd2bc02365ba3007ed484a256651341a87a1f2a03970bac4015809de09ade5 SHA512 230a2e37eea401465017053e3c5e47187a5963f06dc5528c9a3ff6c76ee9e2ff857cb9e4ddf0b72d8d79eadb50834858f5340c02625279c403f30ed709da4869 WHIRLPOOL ccf8426c4f11df69dc3ee96bb4444df1479228f2b1ed2a7da98fc0000f9a5b8c7d82624a36e9de78e5b87bf4296c6ca17c3351f29e1752b58ae73433b1b7d9ee
+DIST gnupg-2.1.0-beta783.tar.bz2 3095003 SHA256 b2bab71204fead83d07790c4f35743a0a464d1d3368a923affc766188097aca1 SHA512 c299195390f2cd6ec85944113f18e8a6987926ccb98d94eb6cf61bdf47548d64faf2a96f751d6a41432c7e72ce65c26ab9ce9fc8fe320c0e96c4159a94cb9e82 WHIRLPOOL e7992174cfae8cbd08d96e57132a38705eca71fed4231ad63f744b186c326276c1a298fc65e971a743f383cab4939944a5b4bbc857e2f3c8210dd6e50085054d
 EBUILD gnupg-1.4.18.ebuild 3763 SHA256 37cedb3946b555e83111f5096b3dd73f9506175976be10d648f8eb76b0b5fd3a SHA512 3dd165eb15a4946a9e2157549f0da6864e84c054a6369d7053730a899b50c5f05a703c1ce8e208b9de21b135bc8888f0f13835fce50f0e9eec467140e7e63355 WHIRLPOOL 9c64d59b7c444dde1fb601a6ab8d1085525153174b5995009ff7758866e56b88028056b42154fa0e28b3328978e15df515e4c65e65cb667fc17b75fb340e8e15
 EBUILD gnupg-2.0.25.ebuild 4747 SHA256 6c57559a986cb9271891d041a6f1e7903ccce835c00d7ea16818078f56f11d78 SHA512 f3d81564eb1c708d188d357521f3c6c43f15a8ac8f2758d14328cc3d7cc40306af50a8269f09dd2f80ec6469dc5f31dd2864008d7526dd9f108b1972ce1a7000 WHIRLPOOL f41c54bef5b0b4b7a7cba514c4c39d2cc938eae5e56c8a225755435393f4e483e5c1bd02d02dd0c86c9d6a945ccfe40090523b7f35228a899043dfa79eff9ba1
 EBUILD gnupg-2.0.26.ebuild 4823 SHA256 27512cd47b79fa8e81efc068ced5aece0c08919bfc4b582c9e39b04f0e587831 SHA512 8b89b1a1a3027a2d6f50fa5265ff3f0a38db6080b44b1791e2edb3e8695b4374a0d2079e466c2911f3aca58657cb8d6bcf4aefda4bdcc2dcce2d3aa7e8ae6ef1 WHIRLPOOL 8cb593260649a838c554f45de26e0be60b34908d1813875fd10c333ab9983bd664b348d8c289b0746dbd02ffd0d2397088966f3ee92dab1004fffe1d83db2268
-EBUILD gnupg-2.1.0_beta751.ebuild 4380 SHA256 f4bf0b6a4ad091b2ecc757c53c1a1e3f09637fcd97abf80faae117e7804b5882 SHA512 078083cf6608211c214d5b4baf060d53e01fcdc1aa1a6ea9b3568431f51cd19dcfba2c849539d14d17116f7c3f416fce5d72d7eb5ec392a19dfff8a2d6bafa8a WHIRLPOOL 0d42edc351d55ab3b89e730a651f8e0a969969e71874d3667fa1c20b77a6377c4f02702465d978a85ed3a6865a9f93d3fd42c57daa9b60789c221e76293716c7
-MISC ChangeLog 78947 SHA256 41c852d1ffaf2b862a549ec9de19b0d6203808618848a5d3aeef5b8d317202f2 SHA512 5accc895f76f9ecf90353b8eb1fad0098cd737704b2bcdf2ae3515fb52642c00300cf9b972116731c0926e968c3ce5734acfbd334d579b7600d31adeb94d080e WHIRLPOOL b7b6479742011b18eb9bd12ec22608fec611d69531149b42e0f817a11b155d8dc1b7c7009ee67e81183d17b3aa38a15e85cec38f86e7ec9d462ef1953d1b1b9a
+EBUILD gnupg-2.1.0_beta783.ebuild 4287 SHA256 673e1aa4f124939ca4831631bdf0e608f2f0f786414ef8d160c8ee039cde91ce SHA512 5f5aa7280df05ff9e2b5b81ee9f56ddf4b286a69f61fe6d578e3001238032b07995aaaeb0180106309e1e12368d367110cbe5e84d75e515843f6dc3f4b8bc5a0 WHIRLPOOL 4a8fc95fbcdc3d51053e4402ca13ae4542681f19aac88fc230e60b49e3f1d7cb0b0f11bebfce6af875057f095f4b93ab4b53f04e43e372eef10b56c989e94dee
+MISC ChangeLog 79145 SHA256 16f2c01c031ff169c942bb1d88f2e8fcb06ee65395bee73449ebfafddc60b9f0 SHA512 9218cf4ca0ee5bcab1591a9de38e5057c1d727ce91e229580186ebfedfef3ffcc3e2164e871f69e0f2858dc00fa286932bb26a487259b4b9f763e11eb03eb653 WHIRLPOOL 3293189cca57bdc47c82d0a84e3ce10555bd781cd9d0785100afbe373bc2b0d9a300b6cee10c75496af79e4fe728fe5e0836f51be2f2f71e842315a5fcd097c1
 MISC metadata.xml 969 SHA256 969b10a1be20daa309d3e392d005a9b1325e7e1a5bf638ae7a9151c625e79d66 SHA512 8cfc927b9df66c91a16e1d54091d36c4610575f7cbc45732dd2d7ce943859b6ec1afd7b25effb16da61d5ad2df7958daf4769fdcef4f137ceaf5112b24a78793 WHIRLPOOL a043979724cc3f4a5cf869459d60998948ed9018666824c2941a21823c3ce03a3012006767951300bdf346582f3aa6f9c035bfa0c607363eb8ef35713cd18254
 -----BEGIN PGP SIGNATURE-----
 
-iQIcBAEBCAAGBQJT63TDAAoJEPw7F94F4Tag1PMP/1AwpdGk1Y/XvGA8P1uS4p/m
-8B1qXdMHQLacXCg6ipzD8nTj2Dt6HVAElaUoU0SHaTvRhn9pjy7laxnupPlapdV7
-/HWTX1D7Te5rbf/7Of7oRWTp6IIh/cViJrsSwaRLSjS3v3FeYi2yZ1Z18ZdBqEAn
-AThna3qW4rIrNa8w3c4HgxTpjmJk/B4sC34eIM+KwWaArcq6IIutDes6v7GLsPkB
-DSVVZ1T9bMQmxHi2gmxmT+8+pslefv3sYHhXNpIwBPl2cTwt71OsKf/gWcVmyxCf
-dNK6sRVroX+nY8zcl/mkr58FO0HUBDV9yQ3I7lQzDR9zk7XBUY1mYhbeDX2tJLUw
-9wBHGtMbWtqMYwPJ84F87xgPs1Uj9jKMshNvYaZEDg6MRNfmNshK4OyMZHKV131I
-8qwYqyrdr0rrps0HGPCsW42rJmgVQEseiI2KzsJ/SlHA+iI+Mz4WiNL34LvTuOSs
-8WQmlfc0HHQi5Pa8J8T9EjvQt3xMRj8lHZS1HBGjVDZ+73MUi0f6n9lEV3AuK7Gs
-q5lc6Q/jqMGwcFphYGPtUOralLBuYMAbxOFbPxrZtagTxbZ2WIDlhcbdPwRyGWPw
-zWR+aA29s9unCuueqJC1AzFAAPXPhlHYF8JY1jWsMJOc0WJVXsorOGIVyL6niyMJ
-/jvyApYTmdC1l/3b93Rr
-=J6N9
+iQIcBAEBCAAGBQJT8oEpAAoJEPw7F94F4TagJP0P/RMCT7fzvN1l4czhhoN0fWlL
+Itv6cdLvly8faf276CvWkVy9wa4fO1UMGmaLeTsCbM5JfLG+otljWX0yz56SZ5rO
+eWXOpYVESkRRqEhGTGF+eVBE55aqD/4PF3DtEoJTSUScojSbpqre8sVQLNA4yNFZ
+t9EUzVckVqX7m0fB0STZWqRLWuf/ABP1yEXnnHqa+enzhYkVYjJc9+UUlFQRhRxu
+dLVPbKldHkW0LdXXkJm1SN5bVIwKi90x4ehrj9y8cpmb0Cs+iltzznf/NA5NuBj5
+thiOSrgBJEf6131PpOXP4XPEjJK9FawGo21BU81lZl+Q/XPn8OhzinTiv+98SCpo
+o1jLr7+lmQXWKlKFQRSvujaLxm2nsYoUr+yA8cqpN6vPrhNu0XjxbqDSaUy+rq38
+db7ROeMLOCrILP3RMyBU9UwVr42zQOO00Uxp8Hv9njLGI2+rKSEy1P9K7uec9wMC
+pXe7AlE+0RuRsHrE8ACXWVec1iPTdQ85qkxbW/9XDWzm+hA6t0VNLSCx33GkJxoN
+7BKObPmp8QINqJ2B1AjVUo29PcuQcfN3DEHRCmWdcfYFfXn/2gLb9XyiQPnRfDx+
++wT3W5iRJIJlOylBvTmXnDbso4jNBq9otFiFyTakoV9yhdzOmaz1ntXKXpBat1e+
+cmSeTaU3yoVH27XKbS1s
+=Jc8h
 -----END PGP SIGNATURE-----
