@@ -1,6 +1,6 @@
 DEFINED_PHASES=compile prepare
 DEPEND=dev-libs/tinyxml media-libs/freeglut media-libs/glew media-libs/pnglite virtual/opengl
-DESCRIPTION=OpenCTM - the Open Compressed Triangle Mesh
+DESCRIPTION=OpenCTM - the Open Compressed Triangle Mesh.
 EAPI=5
 HOMEPAGE=http://openctm.sourceforge.net
 KEYWORDS=~amd64 ~x86
@@ -9,4 +9,4 @@ RDEPEND=dev-libs/tinyxml media-libs/freeglut media-libs/glew media-libs/pnglite 
 SLOT=0
 SRC_URI=mirror://debian/pool/main/o/openctm/openctm_1.0.3+dfsg1.orig.tar.bz2
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=528a8066d76e917ed1b3f315f229f8fc
+_md5_=68ccffefc3b57f6ec5baf613f1919de8
